tercer cambio desde local

--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
     <title>Prueba GIT</title>
 </head>
 <body>
-    <p>Segundo texto desde la nube</p>
+    <p>Tercer texto desde local</p>
 </body>
 </html>
